@@ -1,6 +1,10 @@
 Revision history for Test-BrewBuild
 
 2.19 UNREL
+        - added 'status' command to bbtester, prints to STDOUT whether a tester
+          is currently running or not (closes #214)
+        - added pid() to Tester.pm, returns the running PID, and 0 if a tester
+          is not currently running
 
 2.18    2017-06-25
         - logging output modifications (changes and relocations)
